--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,81 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #17a700;
+  width: 100vw;
+  height: 100vh;
+}
+.controls {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.change-card {
+  background-color: rgb(145, 145, 145);
+  padding: 0.2rem 0.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+
+.card-inputs {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.card-inputs > input {
+  width: 150px;
+  padding: 0.4rem;
+  border-radius: 10px;
+  border: none;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 350px;
+  height: 450px;
+  background-color: #fff;
+  border-radius: 20px;
+}
+
+.card-number {
+  font-size: 9rem;
+}
+.top-img {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  max-width: 50px;
+}
+
+.bottom-img {
+  max-width: 50px;
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+  transform: rotate(180deg);
+}
